<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Turbo Charging -->
    <string name="turbo_charge_title">Turbo Charging</string>
    <string name="turbo_enable_title">Enable Turbo Charging</string>
    <string name="turbo_charge_summary">Enable Turbo Charging for different charging modes up to 67W</string>
    <string name="turbo_charge_current_pref_title">Charging wattage</string>
    <string name="turbo_mode_one">18W</string>
    <string name="turbo_mode_two">30W</string>
    <string name="turbo_mode_three">67W</string>
    <string name="turbo_charge_tile_label">Turbo Charging</string>
    <string name="turbo_charge_tile_content_description">Toggle Turbo Charging</string>

    <!-- Xiaomi Settings -->
    <string name="app_title">Xiaomi Settings</string>
    <string name="tile_add">Add tile</string>
    <string name="tile_added">Tile added</string>
    <string name="tile_not_added">Tile not added</string>
    <string name="tile_already_added">Tile already added</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>

    <!-- Thermal profiles -->
    <string name="thermal_title">Thermal profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">No optimization</string>
    <string name="thermal_benchmark">Performance</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

     <!-- Thermal Profile tiles-->
    <string name="thermalprofile_title">Thermal profile</string>
    <string name="thermalprofile_default">Default</string>
    <string name="thermalprofile_performance">Performance</string>
    <string name="thermalprofile_battery">Battery Saver</string>
    <string name="thermalprofile_game">Game</string>
    <string name="thermalprofile_unknown">Unknown</string>

    <!-- Per-app refresh rate -->
    <string name="refresh_title">Per-app refresh rate</string>
    <string name="refresh_summary">Set the maximum refresh rate for a specific application</string>
    <string name="refresh_default">Default</string>
    <string name="refresh_standard">60Hz</string>
    <string name="refresh_extreme">120Hz</string>

    <!-- Doze Strings -->
    <string name="doze_brightness_low">Low brightness</string>
    <string name="doze_brightness_high">High brightness</string>
    <string name="doze_brightness_adaptive">Adaptive brightness</string>
    <string name="doze_brightness_title">Doze brightness level</string>
    <string name="doze_brightness_summary">Brightness level of doze pulse screen (% of max allowed brightness)</string>

    <!-- Clear Speaker -->
   <string name="clear_speaker_title">Clear speaker</string>
   <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
   <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>

    <!-- Strings related to High Touch Polling -->
    <!-- Title for the High Touch Responsiveness feature -->
    <string name="htsr_title">Enhanced Touch Responsiveness</string>

    <!-- Title for enabling High Touch Polling Rate -->
    <string name="htsr_enable_title">Enable High Touch Polling Rate</string>

    <!-- Description for High Touch Polling Rate -->
    <string name="htsr_enable_summary">
        Boosts the touch polling rate to reduce input latency, delivering a smoother and more responsive user experience.
    </string>

    <!-- Saturation -->
    <string name="saturation_title">Display Saturation</string>
    <string name="saturation_summary">Control the saturation level of the display</string>
    <string name="saturation_footer_summary">Changing the color mode in display settings will override the saturation level, requiring it to be reapplied.</string>
    
    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
    
    <!-- Image preview -->
    <string name="image_preview_content_description">Preview</string>
    <string name="image_preview_next_page_content_description">Next</string>
    <string name="image_preview_previous_page_content_description">Previous</string>

    <!-- AODFOD -->
    <string name="aod_fod_title">Always on Fingerprint</string>
    <string name="aod_fod_summary">Allows unlocking with the screen off. Enabling may cause accidental wake‑ups and may increase battery consumption.</string>

    <!-- Customization Category -->
    <string name="fod_customization_title">FOD Icon Customization</string>

    <!-- Position -->
    <string name="fod_pos_x_title">FOD Icon X Position</string>
    <string name="fod_pos_x_dialog">Enter FOD X coordinate (px)</string>
    <string name="fod_pos_y_title">FOD Icon Y Position</string>
    <string name="fod_pos_y_dialog">Enter FOD Y coordinate (px)</string>
    <string name="fod_pos_summary_x">Current: %s px</string>
    <string name="fod_pos_summary_y">Current: %s px</string>

    <!-- Show/Hide -->
    <string name="show_icon_title">Show FOD Icon</string>
    <string name="show_icon_summary">Toggle to show or hide the FOD icon.</string>

    <!-- Auto-hide -->
    <string name="auto_hide_icon_title">Auto-hide FOD Icon</string>
    <string name="auto_hide_icon_summary">Automatically hide the FOD icon after idle period.</string>
    <string name="auto_hide_delay_title">Idle Auto-hide Delay</string>
    <string name="auto_hide_delay_summary">%s minutes</string>

    <!-- Bottom note -->
    <string name="aod_note_title">Note</string>
    <string name="aod_note_summary">Kindly disable Always on Fingerprint if you want to use AOD or Always‑On Display.</string>
</resources>
